updated content from hackathon

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="//cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
+  <link rel="stylesheet" href="//cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
   <link rel="icon" href="https://bcw.blob.core.windows.net/public/img/9977764104160066">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
@@ -13,19 +13,19 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.0.96/css/materialdesignicons.min.css"
     integrity="sha512-fXnjLwoVZ01NUqS/7G5kAnhXNXat6v7e3M9PhoMHOTARUMCaf5qNO84r5x9AFf5HDzm3rEZD8sb/n6dZ19SzFA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-   
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
   <link rel="stylesheet" href="assets/style/main.css">
   <link rel="stylesheet" href="assets/style/style.css">
   <title>instahooman</title>
 </head>
 
 <body>
-  <header>
+  <!-- <header>
     <nav class="navbar navbar-dark navbar-expand bg-dark text-light">
       <a class="navbar-brand" href="#">
         <img src="https://codeworks.blob.core.windows.net/public/assets/img/cw-mark.png" height="45" alt=""
@@ -37,150 +37,46 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <!-- NAVLINKS -->
+        <div class="navbar-nav"> 
+          <div class="flex-grow-1 justify-content-end align-items-center d-flex" id="authstate"></div>
         </div>
       </div>
       <div class="flex-grow-1 justify-content-end align-items-center d-flex" id="authstate"></div>
     </nav>
-  </header>
-    <!-- SECTION This is our nav section -->
+  </header> -->
+  <!-- SECTION This is our nav section -->
+  <header class="container-fluid">
     <nav class="row bg-white border-bottom p-3">
       <div class="d-flex justify-content-around">
-          <span class="text-dark t-font">Instahuman</span>
-          <div class="d-flex align-items-center">
-              <span class="add mx-5" onclick="app.postController.viewPictures()" data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"><b><i class="mdi mdi-plus-circle-outline fs-3"></i></b></span>
-              <button class="btn btn-outline-dark b-bor">Sign In</button>
-          </div>
+        <span class="text-dark t-font">Instahuman</span>
+        <div class="d-flex align-items-center"><b><i class="mdi mdi-plus-circle-outline fs-3"></i></b>
+          <div class="flex-grow-1 justify-content-end align-items-center d-flex l-logo" width="" id="authstate"></div>
+        </div>
       </div>
     </nav>
-    <!-- SECTION This is our body -->
+  </header>
+  <!-- SECTION This is our body -->
 
-    <main class="vh">
-      <div class="d-flex justify-content-evenly pt-5">
-          <img class="img-fluid p-img"
-              src="https://images.unsplash.com/photo-1659535915214-e7cbac112038?ixlib=rb-1.2.1&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-              alt="" data-bs-toggle="modal" data-bs-target="#post-modal">
-          <img class="img-fluid p-img"
-              src="https://images.unsplash.com/photo-1532635241-17e820acc59f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1630&q=80"
-              alt="">
-          <img class="img-fluid p-img"
-              src="https://images.unsplash.com/photo-1463453091185-61582044d556?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80"
-              alt="">
+  <main class="container-fluid">
+    <div id="all-post" class="row">
+      <!-- <div class="pt-5 col-3">
+              <img class=" img-fluid p-img"
+                  src="https://images.unsplash.com/photo-1463453091185-61582044d556?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80"
+                  alt="" data-bs-toggle="modal" data-bs-target="#post-modal">
+          </div> -->
+    </div>
+  </main>
+
+
+  <footer>
+    <div class="row bg-dark">
+      <div>
+
       </div>
-      <div class="d-flex justify-content-evenly pt-5">
-          <img class="img-fluid p-img"
-              src="https://images.unsplash.com/photo-1511732351157-1865efcb7b7b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1742&q=80alt="">
-          <img class=" img-fluid p-img"
-              src="https://images.unsplash.com/photo-1520880867055-1e30d1cb001c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80alt="">
-          <img class=" img-fluid p-img"
-              src="https://images.unsplash.com/photo-1657214059493-986710bc4788?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80 alt="">
-      </div>
+    </div>
+  </footer>
 
-          
-
-          <!-- SECTION This is for the modal TO ADD A PICTURE -->
-
-          <div class=" modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-              aria-hidden="true">
-          <div class="modal-dialog">
-              <div class="modal-content">
-                  <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLabel">Add Picture</h5>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body">
-                      <form>
-                          <div class="mb-3">
-                              <label for="img" class="col-form-label">Image:</label>
-                              <input type="text" class="form-control" id="post-img">
-                          </div>
-                          <div class="mb-3 c-scroll">
-                              <label for="caption" class="col-form-label">Caption:</label>
-                              <textarea class="form-control" id="post-caption" minlength="2"
-                                  maxlength="50"></textarea>
-                          </div>
-                      </form>
-                  </div>
-                  <div class="col-12 modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                      <button type="button" class="btn btn-primary">Upload Post</button>
-                  </div>
-              </div>
-          </div>
-      </div>
-
-
-      <!-- SECTION This modal is to look at a post and it's comments -->
-      <div class="modal fade" id="post-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-size">
-              <div class="modal-content">
-
-                  <div class="row modal-body">
-                      <div class="col-6">
-                          <div>
-                              <img class="img-fluid post-img"
-                                  src="https://images.unsplash.com/photo-1463453091185-61582044d556?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80"
-                                  alt="">
-                          </div>
-                      </div>
-                      <div class="col-6">
-                          <div class="mx-3">
-                              <div>
-                                  <p class="fw-2">Caption: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                                      sed do eiusmod
-                                      tempor incididunt ut labore et dolore magna aliqua.</p>
-                              </div>
-                              <div>
-                                  <p class="fw-2">Comment: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                                      sed do eiusmod
-                                      tempor incididunt ut labore et dolore magna aliqua.</p>
-                              </div>
-                              <div>
-                                  <p class="fw-2">Comment: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                                      sed do eiusmod
-                                      tempor incididunt ut labore et dolore magna aliqua.</p>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col-12 border border-top">
-                      <div class="row justify-content-between p-3">
-
-                          <div class="col-3">
-                              <h4 class="text-center">🔥</h4>
-                          </div>
-                          <div class="col-3">
-                              <h4 class="text-center">🥶</h4>
-                          </div>
-
-                          <div class="col-6">
-                              <form class="ps-4">
-                                  <div class="input-group">
-                                      <input type="text" class="form-control" placeholder="Enter Comment"
-                                          aria-label="post's comments" aria-describedby="button-addon2" minlength="2"
-                                          maxlength="50">
-                                      <button class="btn btn-primary" type="button" id="button-addon2">Post</button>
-                                  </div>
-                              </form>
-                          </div>
-
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-
-
-
-
-
-
-
-
-
-  <main id="app">
+  <!-- <main id="app">
     <div class="container-fluid">
       <div class="row my-3">
         <div class="col-lg-5" id="auth-settings">
@@ -200,14 +96,48 @@
         </div>
       </div>
     </div>
-  </main>
-  <footer class="container-fluid bg-dark text-light">
-    <div class="row text-center">
-      <div class="col">
-        <p><small>Made with 💖 by CodeWorks</small></p>
+  </main> -->
+
+  <!-- SECTION This is for the modal TO ADD A POST -->
+
+  <div class="modal fade" id="addPicture" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Add Picture</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form onsubmit="app.allPostsController.createPost()">
+            <div class="mb-3">
+              <label for="img" class="col-form-label">Image:</label>
+              <input type="text" class="form-control" id="img">
+            </div>
+            <div class="mb-3 c-scroll">
+              <label for="title" class="col-form-label">Title:</label>
+              <textarea class="form-control" id="title" minlength="2" maxlength="50"></textarea>
+            </div>
+
+        </div>
+        <div class="col-12 modal-footer">
+          <button type="submit" class="btn btn-primary">Upload Post</button>
+        </div>
+        </form>
       </div>
     </div>
-  </footer>
+  </div>
+
+
+  <!-- SECTION This modal is to look at a post and it's comments -->
+  <div class="modal fade" id="details-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-size">
+      <div class="modal-content" id="details-modal-content">
+
+
+      </div>
+    </div>
+  </div>
+
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.auth0.com/js/auth0-spa-js/1.15/auth0-spa-js.production.js"></script>
