user images show next to comments + cleanup

--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
 
   <link rel="stylesheet" href="assets/style/main.css">
   <link rel="stylesheet" href="assets/style/style.css">
-  <title>instahooman</title>
+  <title>Instahuman</title>
 </head>
 
 <body>
