create post form works

--- a/client/index.html
+++ b/client/index.html
@@ -49,7 +49,7 @@
     <nav class="row bg-white border-bottom p-3">
       <div class="d-flex justify-content-around">
         <span class="text-dark t-font">Instahuman</span>
-        <div class="d-flex align-items-center"><b><i class="mdi mdi-plus-circle-outline fs-3"></i></b>
+        <div class="d-flex align-items-center"><b><i class="mdi mdi-plus-circle-outline fs-3 selectable mr-2" onclick="" data-bs-toggle="modal" data-bs-target="#create-post-modal"></i></b>
           <div class="flex-grow-1 justify-content-end align-items-center d-flex l-logo" width="" id="authstate"></div>
         </div>
       </div>
@@ -100,7 +100,7 @@
 
   <!-- SECTION This is for the modal TO ADD A POST -->
 
-  <div class="modal fade" id="addPicture" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="create-post-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
